--- a/app2/templates/app2/store.html
+++ b/app2/templates/app2/store.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <title>Stationary Stores</title>
 <h1>Stationary Stores</h1>
 
@@ -8,7 +9,7 @@
     <button type="submit" name="insert" value="insert">Insert</button>
 </form>
 
-<table>
+<table class="table">
     <tr>
         <th>Store name</th>
     </tr>
