--- a/app2/templates/app2/store_update.html
+++ b/app2/templates/app2/store_update.html
@@ -1,8 +1,11 @@
+{% extends 'base.html' %}
 <title>Edit Store</title>
 <h1>Update Store</h1>
 
+{% block content %}
 <form action="/store/{{store.id}} " method="post">
     {% csrf_token %}
     {{ form }}
     <button type="submit" name="update" value="update">Update</button>
 </form>
+{% endblock %}
