--- a/app2/templates/app2/item.html
+++ b/app2/templates/app2/item.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <title>Stationary Items</title>
 <h1>Stationary Items</h1>
 
@@ -8,7 +9,7 @@
     <button type="submit" name="insert" value="insert">Insert</button>
 </form>
 
-<table>
+<table class="table">
     <tr>
         <th>Item name</th>
         <th>Store name</th>
