--- a/app2/templates/app2/item_update.html
+++ b/app2/templates/app2/item_update.html
@@ -6,6 +6,6 @@
 <form action="/item/{{item.id}} " method="post">
     {% csrf_token %}
     {{ form }}
-    <button type="submit" name="update" value="update">Update</button>
+    <button type="submit" name="method" value="update">Update</button>
 </form>
 {% endblock %}
