--- a/app2/templates/app2/store_update.html
+++ b/app2/templates/app2/store_update.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
+{% block head %}
 <title>Edit Store</title>
 <h1>Update Store</h1>
+{% endblock %}
 
 {% block content %}
 <form action="/store/{{store.id}} " method="post">
