--- a/app2/templates/app2/item.html
+++ b/app2/templates/app2/item.html
@@ -18,15 +18,15 @@
         <th></th>
         <th></th>
     </tr>
-    {% for item in item_list %}
+    {% for object in object_list %}
     <tr>
-        <td>{{ item.name }} </td>
-        <td>{{ item.store__name }} </td>
-        <form action="/item/{{ item.id }}", method="post">
+        <td>{{ object.name }} </td>
+        <td>{{ object.store__name }} </td>
+        <form action="/item/{{ object.id }}", method="post">
             {% csrf_token %}
             <td><button type="submit" name="method" value="delete">Delete</button> </td>
         </form>
-        <form action="/item/{{ item.id }}", method="post">
+        <form action="/item/{{ object.id }}", method="post">
             {% csrf_token %}
             <td><button type="submit" name="method" value="edit">Edit</button> </td>    
         </form>
